# neurodivergent-founders-os

./: .gitignore  INDEX.md  LICENSE  OVERVIEW.md  QUICKSTART.md  README.md  THE-OS.md  pyproject.toml  test_nd_os.py
nd_os/: __init__.py  compound.py  energy.py  momentum.py  parallel.py  profile.py  protocol.py  thermal.py  translation.py
nd_os/hooks/: __init__.py  claude_code.py  session_hook.sh  terminal.py
nd_os/presets/: adhd_hyperfocus.json  adhd_parallel.json  autism_systematic.json  dyslexia_visual.json  mixed.json
