[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nd-os"
version = "0.1.0"
description = "Operating system for neurodivergent founders. Weaponize your brain, not cope with it."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Josh Langsam", email = "josh@roanco.law"}
]
keywords = ["adhd", "founder", "productivity", "neurodivergent", "energy-mapping", "momentum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
claude-code = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/joshlangsam/nd-os"
Documentation = "https://github.com/joshlangsam/nd-os#readme"
Repository = "https://github.com/joshlangsam/nd-os"
Issues = "https://github.com/joshlangsam/nd-os/issues"

[tool.setuptools]
packages = ["nd_os", "nd_os.hooks"]
package-data = {nd_os = ["presets/*.json"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nd_os --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
